<resources>
    <string name="app_name">AdoptMe</string>

    <string name="SignUp">Sign Up</string>
    <string name="CreateAccount">Create Account</string>
    <string name="LogIn">Log In</string>
    <string name="Username">Enter your username</string>
    <string name="Password">Enter your password</string>

    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Name">Name</string>
    <string name="ShelterName">Shelter Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Pass">Password</string>
    <string name="Address">Street Address</string>

    <string name="firstNameError">Enter a Valid First Name</string>
    <string name="lastNameError">Enter a Valid Last Name</string>
    <string name="userNameError">Enter a Valid Username</string>
    <string name="passwordError">Enter a Valid Password</string>
    <string name="emailError">Enter a Valid Email</string>


    <string name="edit_animal">Edit Animal</string>
    <string name="new_animal">New Animal</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>



    <string-array name="signup_array">
        <item>Adopter</item>
        <item>Shelter</item>
    </string-array>

    <string-array name="settings_array">
        <item>Cat</item>
        <item>Dog</item>
        <item>Rabbit</item>
    </string-array>

</resources>