<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirebaseCreateAccount">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createAccountNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Name"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createAccountInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/createAccountEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Email"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createAccountInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/createAccountPasswordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Pass"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createAccountInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Pass"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/createAccountAcctTypeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Account Type"
            android:textAlignment="center"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/createAccountInputAcctType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Account Type"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="10dp" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateAccount"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:onClick="onClickCreateAccount"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>